tests/rules/samples/check_preprocessor_define.c
#define lower_case_macro 1
#define UPPER_CASE_MACRO 2
#define PascalCaseMacro 3

#define         EXTRA_SPACING 0
#define		IlikeTabs 1
#define 	 	   	WEIRD_SPACING 2


#define HOJEEHDIA										\
	1 /* wat */

#define HOJEEHDIA2  	     		 "5 do 7 de 2023"

#define PERGUNTAMO

#define NUNTI PERGUNTAMO // NADA

#define NON_CONSTANT 1 + 2
#define AHN 1 1 1 1 1 1 1 1 1 1 1

#define BLA (1)

#define BLO + 2)

#define NO_SYMBOLS ?
#define NO_SYMBOLS2 &&

#define ABS(x) ((x) < 0 ? -(x) : (x))
#define NOT(o)			!o

#define OK

#define B 'A'
#define B 'a'